# pglearned

./: .gitignore  AGENTS.md  README.md  flake.nix
cli/: Cargo.toml  README.md
cli/src/: main.rs
extension/: Cargo.toml  README.md  build.rs  pgl.control
extension/src/: datasets.rs  explain.rs  lib.rs  utils.rs
extension/src/cardinality/: apply.rs  extract.rs  mod.rs  payload.rs
extension/src/planner/: brute.rs  default.rs  explain.rs  mod.rs  types.rs
extension/src/rpc/: client.rs  mod.rs
extension/tests/pg_regress/expected/: setup.out
frameworks/python/: README.md  build.sh  pyproject.toml
frameworks/python/examples/: constant_cardinality_estimator.py
frameworks/python/pgl/: __init__.py  adapter.py  client.py  server.py
frameworks/python/pgl/proto/: pgl_rpc_pb2.py  pgl_rpc_pb2_grpc.py
proto/: pgl_rpc.proto
tests/: data.sql  dataset.sql
