[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgl"
version = "0.1.0"
description = "Python bindings for pglearned extension"
requires-python = ">=3.7"
dependencies = [
    "psycopg[binary]>=3.0.0",
    "grpcio>=1.50.0",
    "protobuf>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/RMTT/pglearned"
